--- a/Practica1/Practica1/Properties/Resources.resx
+++ b/Practica1/Practica1/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="Ingresar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ingresar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="238870" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\238870.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
